# HeadlessX

./: .dockerignore  .env.example  .eslintignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  jest.config.js  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  project.json
.github/: DISCUSSION_CATEGORIES.md  FUNDING.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: announcements.yml  ideas.yml  q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security.yml
apps/api/: package.json  prisma.config.ts
apps/go-html-to-md-service/: Dockerfile  converter.go  go.mod  go.sum  handler.go  main.go
apps/web/: README.md  next.config.ts  package.json
apps/yt-engine/: pyproject.toml
apps/yt-engine/app/: __init__.py  main.py  schemas.py  service.py
backend/: package-lock.json  package.json  prisma.config.ts  test_profile_creation.ts  test_service_creation.ts  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: app.ts  env.ts  server_entry.ts
docker/: Dockerfile
docs/: CLI.md  api-endpoints.md  docker_setup.md  setup-guide.md
docs/V2/: SYSTEM-REQUIREMENTS.md  roadmap-v2.md
docs/plans/: 2026-03-07-dashboard-layout-normalization-design.md  2026-03-07-logs-page-design.md  (+8 more)
frontend/: .npmrc  mdx-components.tsx  mdx.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
scripts/: download_models.py  install.bat  install.sh  install_models.bat  install_models.sh  start.bat  start.sh  update.sh  verify-architecture.js
src/: app.js
test/: setup.js
(+898 files in other folders)
